--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <nav>
     
     <ul>
-        <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoInicio.html"> Inicio </a></li>
-        <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoBlog.html"> Blog </a></li>
-        <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoContacto.html"> Contacto </a></li>
-        <li> <a href="http://127.0.0.1:5500/ProductoPagina/Servicios.html"> Servicios </a></li>
+        <li> <a href="http://127.0.0.1:5500/index.html"> Inicio </a></li>
+        <li> <a href="http://127.0.0.1:5500/ProductoBlog.html"> Blog </a></li>
+        <li> <a href="http://127.0.0.1:5500/ProductoContacto.html"> Contacto </a></li>
+        <li> <a href="http://127.0.0.1:5500/Servicios.html"> Servicios </a></li>
 
     </ul>
   </nav>
@@ -79,7 +79,7 @@
   <li><a href="#PROBLEMAS">¿Nos traerá problemas?</a></li>
   <li><a href="#FUTURO">¿Cuál es el futuro?</a></li>
   <li><a href="#CONFIAR">Confiar en ella</a></li>
-  <li><a href="http://127.0.0.1:5500/ProductoPagina/tabla.html">TABLA </a></li>
+  <li><a href="http://127.0.0.1:5500/tabla.html">TABLA </a></li>
 </ol>
 
 <br>
