--- a/Servicios.html
+++ b/Servicios.html
@@ -30,10 +30,10 @@
       <nav>
         
         <ul>
-            <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoInicio.html"> Inicio </a></li>
-            <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoBlog.html"> Blog </a></li>
-            <li> <a href="http://127.0.0.1:5500/ProductoPagina/ProductoContacto.html"> Contacto </a></li>
-            <li> <a href="http://127.0.0.1:5500/ProductoPagina/Servicios.html"> Servicios </a></li>
+            <li> <a href="http://127.0.0.1:5500/index.html.html"> Inicio </a></li>
+            <li> <a href="http://127.0.0.1:5500/ProductoBlog.html"> Blog </a></li>
+            <li> <a href="http://127.0.0.1:5500/ProductoContacto.html"> Contacto </a></li>
+            <li> <a href="http://127.0.0.1:5500/Servicios.html"> Servicios </a></li>
     
         </ul>
       </nav>
