--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <nav>
     
     <ul>
-        <li> <a href="http://127.0.0.1:5500/index.html"> Inicio </a></li>
-        <li> <a href="http://127.0.0.1:5500/ProductoBlog.html"> Blog </a></li>
-        <li> <a href="http://127.0.0.1:5500/ProductoContacto.html"> Contacto </a></li>
-        <li> <a href="http://127.0.0.1:5500/Servicios.html"> Servicios </a></li>
+        <li> <a href="/index.html"> Inicio </a></li>
+        <li> <a href="/ProductoBlog.html"> Blog </a></li>
+        <li> <a href="/ProductoContacto.html"> Contacto </a></li>
+        <li> <a href="/Servicios.html"> Servicios </a></li>
 
     </ul>
   </nav>
