--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
     <nav>
 
       <ul>
-        <li> <a href="Pagina-Producto2-UTP/index.html"> Inicio </a></li>
-        <li> <a href="Pagina-Producto2-UTP/ProductoBlog.html"> Blog </a></li>
-        <li> <a href="Pagina-Producto2-UTP/ProductoContacto.html"> Contacto </a></li>
-        <li> <a href="Pagina-Producto2-UTP/Servicios.html"> Servicios </a></li>
-
+        <li> <a href="index.html"> Inicio </a></li>
+        <li> <a href="ProductoBlog.html"> Blog </a></li>
+        <li> <a href="ProductoContacto.html"> Contacto </a></li>
+        <li> <a href="Servicios.html"> Servicios </a></li>
       </ul>
     </nav>
     <div class="logotipo">
