--- a/ProductoBlog.html
+++ b/ProductoBlog.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Cookie&family=Courgette&family=Pacifico&family=Ultra&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="estiloBlog.css">
+  <link rel="stylesheet" href="EstiloBlog.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
@@ -39,6 +39,7 @@
         <li> <a href="ProductoBlog.html"> Blog </a></li>
         <li> <a href="ProductoContacto.html"> Contacto </a></li>
         <li> <a href="Servicios.html"> Servicios </a></li>
+
       </ul>
     </nav>
     <div class="logotipo">
